@@ -34,7 +34,7 @@ if not os.path.isdir('docs/_build'):
 
 setup(
     name="Ibidas",
-    version="0.1.23",
+    version="0.1.25",
     packages = find_packages(),
     test_suite = "test",
     scripts = ['bin/ibidas','bin/ibidas_shell.py','bin/python_2_please'],
